--- a/Homeworks/CSS/02.CSSPresentation/WindowsCalculator/style.css
+++ b/Homeworks/CSS/02.CSSPresentation/WindowsCalculator/style.css
@@ -96,7 +96,7 @@ button:disabled {
     background: none;
     background-color: #DBE6F2;
     box-shadow: none;
-}
+}u
 
 button:hover:enabled {
     border-color: #F6D712;
